<resources>
    <string name="app_name">Birthday Notifier</string>
    <string name="mainmenu_recents">Recents</string>
    <string name="mainmenu_home">Home</string>
    <string name="mainmenu_settings">Settings</string>
    <string name="recyclerview_demoName">Tamzid Hasan Nahid</string>
    <string name="recyclerview_demoTime">10:49 PM</string>
    <string name="recyclerView_demoDate">03-02</string>
    <string name="mainHome_sortTitle">Sort :</string>
    <string name="addNew_nameFieldHint">Name</string>
    <string name="addNew_timeTitle">Select a Time :</string>
    <string name="addNew_DateTitle">Select a Date :</string>
    <string name="menuAddNew_save">Save</string>
    <string name="recyclerView_dateTitle">"Date : "</string>
    <string name="recents_title">Upcoming Birthdates</string>
    <string name="settings_title">Settings</string>
    <string name="settings_subtitleService">ONLINE SERVICES</string>
    <string name="settings_loginTxt">Sign In</string>
    <string name="settings_signInDetails">If you have already sign up , then sign in for online backup or restore .</string>
    <string name="settings_emailHint">Email</string>
    <string name="settings_passwordHint">Password</string>
    <string name="settings_signUpTitle">Sign Up</string>
    <string name="settings_signUpDetails">If you don\'t have account , then please sign up</string>
    <string name="settings_signUpButton">Sign Up</string>
    <string name="settings_forgetPasswordTitle">Forget Password</string>
    <string name="settings_forgetPasswordDetails">if you forget your password , enter your email to reset it .</string>
    <string name="settings_forgetPasswordButton">Done</string>
    <string name="settings_subtitleDatabase">DATABASE</string>
    <string name="settings_clearAllDataButton">Clear</string>
    <string name="settings_clearAllDataDetails">Clear Data</string>
    <string name="settings_clearAllDataSub">clear all the data from your local database .</string>
    <string name="online_header">Online Services</string>
    <string name="online_backupTitle">BACKUP</string>
    <string name="online_backUp">"Can keep online backup "</string>
    <string name="online_backup">Back Up</string>
    <string name="online_email">Email :</string>
    <string name="online_restoreTitle">RESTORE</string>
    <string name="online_restore">Can restore the data which is backed up in online</string>
    <string name="online_restoreButton">Restore</string>
    <string name="online_clearDataTitle">CLEAN</string>
    <string name="online_clearDataDetails">Clear all the data stored in online</string>
    <string name="online_signOut">Sign Out</string>
    <string name="addNew_detailsOfTimePicker">Set the Day and Month of the birthday . It will fire up every year so don\'t need year .</string>
    <string name="addNew_detailisOfNotification">Set the notification to get notification in previous day of the birthdate at 11 PM .</string>
    <string name="settings_titleOfHelp">HELP</string>
    <string name="settings_aboutTitle">About</string>
    <string name="settings_aboutDetails">This app helps you to remember the Date you fixed every year once .
        \n\nThe notification will show in the previous day at 11 PM .
        \n\nThis app can store data locally and online .
        \n\nTo backup or restore you have to signup then signin using proper working e-mail .</string>
    <string name="settings_contactUsTitle">Contact us</string>
    <string name="settings_contactUsDetails">If you have any inquiry or face any problem , you can contact via e-mail . \n\nE-mail : nahid0335@gmail.com</string>


    <string-array name="mainHome_sortList">
        <item>Alphabetic</item>
        <item>Date</item>
    </string-array>


</resources>
