<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:elevation="5dp"
        android:text="@string/recyclerView_dateTitle"
        android:textAlignment="textEnd"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
        app:layout_constraintEnd_toStartOf="@+id/textView_recyclerViewHome_Date"
        app:layout_constraintStart_toEndOf="@+id/textView_recyclerViewHome_Time"
        app:layout_constraintTop_toBottomOf="@+id/textView_recyclerViewHome_Name" />

    <ImageView
        android:id="@+id/imageView_recyclerViewHome_firstLatter"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
        app:layout_constraintStart_toStartOf="@+id/materialCardView"
        app:layout_constraintTop_toTopOf="@+id/materialCardView" />

    <TextView
        android:id="@+id/textView_recyclerViewHome_Name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="1dp"
        android:elevation="5dp"
        android:ellipsize="end"
        android:padding="5dp"
        android:singleLine="true"
        android:text="@string/recyclerview_demoName"
        android:textColor="#FC000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imageView_recyclerViewHome_notificationIcon"
        app:layout_constraintStart_toEndOf="@+id/imageView_recyclerViewHome_firstLatter"
        app:layout_constraintTop_toTopOf="@+id/materialCardView" />

    <ImageView
        android:id="@+id/imageView_recyclerViewHome_notificationIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="5dp"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
        app:layout_constraintEnd_toEndOf="@+id/materialCardView"
        app:layout_constraintTop_toTopOf="@+id/materialCardView" />

    <TextView
        android:id="@+id/textView_recyclerViewHome_Time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:elevation="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/recyclerview_demoTime"
        android:textColor="#E8000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
        app:layout_constraintStart_toEndOf="@+id/imageView_recyclerViewHome_firstLatter"
        app:layout_constraintTop_toBottomOf="@+id/textView_recyclerViewHome_Name" />

    <TextView
        android:id="@+id/textView_recyclerViewHome_Date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:elevation="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/recyclerView_demoDate"
        android:textColor="#D8000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
        app:layout_constraintEnd_toStartOf="@+id/imageView_recyclerViewHome_notificationIcon"
        app:layout_constraintTop_toBottomOf="@+id/textView_recyclerViewHome_Name" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>